# ticket_automation

./: .env.example  AGENTS.md  CLAUDE.md  QWEN.md  README.md  langgraph.json  pyproject.toml
.claude/agents/Software Quality Engineer/: code-quality-reviewer.md  documentation-accuracy-reviewer.md  performance-reviewer.md  security-code-reviewer.md  test-coverage-reviewer.md
.claude/agents/prompts writer/: prompt-engineer.md
.github/workflows/: claude.yml
notebooks/: test_tools.py
src/MyAgent/: agent.py  cron.py  prompts.py  schemas.py
src/MyAgent/eval/: agent_dataset.py  evaluate_triage.py  prompts.py
src/MyAgent/subagents/: company_info_agent.py  delivery_agent.py  order_agent.py  transaction_agent.py
src/MyAgent/subagents/prompts/: subagent_prompt.py
src/MyAgent/tools/: __init__.py  base.py  tools_docs_info.py  tools_prompt.py
src/MyAgent/tools/db_tools/: README.md
src/MyAgent/tools/default/: email_tools.py
src/MyAgent/tools/jira_tools/: README.md
src/MyAgent/tools/plateform_specific/: prompt_templates.py
